--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa-cogs"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Caleb Geiger</h1>
-								<p>Hello! I'm Caleb Geiger, a developer based in Columbus, Ohio, <br/ >
+								<p>Hi! I'm Caleb Geiger, a developer based in Columbus, Ohio, <br/ >
 									specializing in data analysis, process automation, and system integrations. </p>
 							</div>
 						</div>
@@ -90,8 +90,8 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>  -->
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
