--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="preload" href="../../images/bg.jpg" as="image" type="image/jpeg">
+		<link rel="preload" href="../../images/overlay.png" as="image" type="image/png">
 	</head>
 	<body class="is-preload">
 
