added email form capability

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Caleb Geiger</h1>
-								<p>Hi! I'm Caleb Geiger, a Columbus, Ohio-based developer passionate about leveraging data to solve real-world problems. <br>
-									I specialize in data analysis, process automation, and system integrations in order to gain valuable insights and streamline business operations.
+								<p>I'm Caleb Geiger, a Columbus-based developer, specializing in data analysis, process automation, <br>
+									and system integrations to help businesses operate smarter and more efficiently.
 							</div>
 						</div>
 						<nav>
@@ -74,12 +74,15 @@
 							<h2 class="major">Blog</h2>
 							<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 							<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+							<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
+							<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+							<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 						</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/f/xanwkbyy">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -87,7 +90,7 @@
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
+											<input type="email" name="email" id="email" />
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
