optimized image background and added list to projects

--- a/index.html
+++ b/index.html
@@ -5,145 +5,171 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Caleb Geiger</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="preload" href="../../images/bg.jpg" as="image" type="image/jpeg">
-		<link rel="preload" href="../../images/overlay.png" as="image" type="image/png">
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>Caleb Geiger</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+	<link rel="preload" href="../../images/bg.jpg" as="image" type="image/jpeg">
+	<link rel="preload" href="../../images/overlay.png" as="image" type="image/png">
+</head>
 
-				<!-- Header -->
-					<header id="header">
-						<div class="logo">
-							<span class="icon fa-user"></span>
-						</div>
-						<div class="content">
-							<div class="inner">
-								<h1>Caleb Geiger</h1>
-								<p>I'm Caleb Geiger, a Columbus-based developer, specializing in data analysis, process automation, <br>
-									and system integrations to help businesses operate smarter and more efficiently.
-							</div>
-						</div>
-						<nav>
-							<ul>
-								<li><a href="#aboutme">About Me</a></li>
-								<li><a href="#projects">Projects</a></li>
-								<li><a href="#services">Services</a></li>
-								<li><a href="#blog">Blog</a></li>
-								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
-							</ul>
-						</nav>
-					</header>
+<body class="is-preload">
 
-				<!-- Main -->
-					<div id="main">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-						<!-- About Me -->
-							<article id="aboutme">
-								<h2 class="major">About Me</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-							</article>
-
-						<!-- Work -->
-							<article id="projects">
-								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
-							</article>
-
-						<!-- Services -->
-							<article id="services">
-								<h2 class="major">Services</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-							</article>
-
-						<!-- Blog -->
-						<article id="blog">
-							<h2 class="major" id="blog-header">Blog</h2>
-							<span class="image main" id="blog-image"><img src="images/pic03.jpg" alt="" /></span>
-							<div id="blog-list">
-								<!-- Blog post links will be inserted here -->
-							</div>
-							<div id="blog-detail" style="display:none;">
-								<!-- Full blog post content will be dynamically inserted here -->
-							</div>
-						</article>
-
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form action="https://api.web3forms.com/submit" method="post">
-									<input type="hidden" name="access_key" value="41b884d1-8361-422c-99f2-0bbbdd79e790">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" required/>
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="email" name="email" id="email" required/>
-										</div>
-										<div class="field">
-											<label for="message">Messages</label>
-											<textarea name="message" id="message" rows="4" required></textarea>
-										</div>
-										<input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-
-								<script>
-									document.querySelector('form').addEventListener('submit', function(event) {
-										// Check if the form is valid
-										if (!event.target.checkValidity()) {
-											// Prevent the form from submitting
-											event.preventDefault();
-											// Show an alert or handle the invalid form in another way
-											alert('Please fill out all required fields correctly.');
-										}
-									});
-								</script>
-
-								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/calebgeiger/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>  -->
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github.com/CalebGeiger" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</article>
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-					</footer>
-
+		<!-- Header -->
+		<header id="header">
+			<div class="logo">
+				<span class="icon fa-user"></span>
 			</div>
+			<div class="content">
+				<div class="inner">
+					<h1>Caleb Geiger</h1>
+					<p>I'm Caleb Geiger, a Columbus-based developer, specializing in data analysis, process automation,
+						<br>
+						and system integrations to help businesses operate smarter and more efficiently.
+				</div>
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#aboutme">About Me</a></li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="#services">Services</a></li>
+					<li><a href="#blog">Blog</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<!--<li><a href="#elements">Elements</a></li>-->
+				</ul>
+			</nav>
+		</header>
 
-		<!-- BG -->
-			<div id="bg"></div>
+		<!-- Main -->
+		<div id="main">
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/blog.js"></script>
+			<!-- About Me -->
+			<article id="aboutme">
+				<h2 class="major">About Me</h2>
+				<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+				<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum
+					congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut
+					magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a
+						href="#work">awesome work</a>.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent
+					taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique
+					libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut
+					ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor.
+					Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique
+					senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus.
+					Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+			</article>
 
-	</body>
+			<!-- Work -->
+			<article id="projects">
+				<h2 class="major">Projects</h2>
+				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+				<div id="projects-list">
+					<!-- Project links will be inserted here -->
+				</div>
+				<div id="projects-detail" style="display:none;">
+					<!-- Full project content will be dynamically inserted here -->
+				</div>
+			</article>
+
+			<!-- Services -->
+			<article id="services">
+				<h2 class="major">Services</h2>
+				<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+				<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at
+					eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula
+					lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada
+					fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum
+					dolor sit amet.</p>
+			</article>
+
+			<!-- Blog -->
+			<article id="blog">
+				<h2 class="major" id="blog-header">Blog</h2>
+				<span class="image main" id="blog-image"><img src="images/pic03.jpg" alt="" /></span>
+				<div id="blog-list">
+					<!-- Blog post links will be inserted here -->
+				</div>
+				<div id="blog-detail" style="display:none;">
+					<!-- Full blog post content will be dynamically inserted here -->
+				</div>
+			</article>
+
+			<!-- Contact -->
+			<article id="contact">
+				<h2 class="major">Contact</h2>
+				<form action="https://api.web3forms.com/submit" method="post">
+					<input type="hidden" name="access_key" value="41b884d1-8361-422c-99f2-0bbbdd79e790">
+					<div class="fields">
+						<div class="field half">
+							<label for="name">Name</label>
+							<input type="text" name="name" id="name" required />
+						</div>
+						<div class="field half">
+							<label for="email">Email</label>
+							<input type="email" name="email" id="email" required />
+						</div>
+						<div class="field">
+							<label for="message">Messages</label>
+							<textarea name="message" id="message" rows="4" required></textarea>
+						</div>
+						<input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+					</div>
+					<ul class="actions">
+						<li><input type="submit" value="Send Message" class="primary" /></li>
+						<li><input type="reset" value="Reset" /></li>
+					</ul>
+				</form>
+
+				<script>
+					document.querySelector('form').addEventListener('submit', function (event) {
+						// Check if the form is valid
+						if (!event.target.checkValidity()) {
+							// Prevent the form from submitting
+							event.preventDefault();
+							// Show an alert or handle the invalid form in another way
+							alert('Please fill out all required fields correctly.');
+						}
+					});
+				</script>
+
+				<ul class="icons">
+					<li><a href="https://www.linkedin.com/in/calebgeiger/" class="icon brands fa-linkedin-in"><span
+								class="label">LinkedIn</span></a></li>
+					<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>  -->
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/CalebGeiger" class="icon brands fa-github"><span
+								class="label">GitHub</span></a></li>
+				</ul>
+			</article>
+		</div>
+
+		<!-- Footer -->
+		<footer id="footer">
+		</footer>
+
+	</div>
+
+	<!-- BG -->
+	<div id="bg"></div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/blog.js"></script>
+	<script src="assets/js/projects.js"></script>
+
+</body>
+
 </html>
