fixed link issue on projects list

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
 			<!-- Work -->
 			<article id="projects">
-				<h2 class="major">Projects</h2>
-				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+				<h2 class="major" id="projects-header">Projects</h2>
+				<span class="image main" id="projects-image"><img src="images/pic02.jpg" alt="" /></span>
 				<div id="projects-list">
 					<!-- Project links will be inserted here -->
 				</div>
