updated transitions for blog elements

--- a/index.html
+++ b/index.html
@@ -92,13 +92,17 @@
 
 			<!-- Blog -->
 			<article id="blog">
-				<h2 class="major" id="blog-header">Blog</h2>
-				<span class="image main" id="blog-image"><img src="images/pic03.jpg" alt="" /></span>
-				<div id="blog-list">
-					<!-- Blog post links will be inserted here -->
-				</div>
-				<div id="blog-detail" style="display:none;">
-					<!-- Full blog post content will be dynamically inserted here -->
+				<div class="blog-container"> <!-- New wrapper div -->
+					<div class="blog-main-view"> <!-- New wrapper for main view content -->
+						<h2 class="major" id="blog-header">Blog</h2>
+						<span class="image main" id="blog-image"><img src="images/pic03.jpg" alt="" /></span>
+						<div id="blog-list">
+							<!-- Blog post links will be inserted here -->
+						</div>
+					</div>
+					<div id="blog-detail">
+						<!-- Full blog post content will be dynamically inserted here -->
+					</div>
 				</div>
 			</article>
 
