added smoother transitions to project section

--- a/index.html
+++ b/index.html
@@ -69,13 +69,17 @@
 
 			<!-- Work -->
 			<article id="projects">
-				<h2 class="major" id="projects-header">Projects</h2>
-				<span class="image main" id="projects-image"><img src="images/pic02.jpg" alt="" /></span>
-				<div id="projects-list">
-					<!-- Project links will be inserted here -->
-				</div>
-				<div id="projects-detail" style="display:none;">
-					<!-- Full project content will be dynamically inserted here -->
+				<div class="projects-container"> <!-- New wrapper div -->
+					<div class="projects-main-view"> <!-- New wrapper for main view content -->
+						<h2 class="major" id="projects-header">Projects</h2>
+						<span class="image main" id="projects-image"><img src="images/pic03.jpg" alt="" /></span>
+						<div id="projects-list">
+							<!-- Project links will be inserted here -->
+						</div>
+					</div>
+					<div id="projects-detail">
+						<!-- Full Project content will be dynamically inserted here -->
+					</div>
 				</div>
 			</article>
 
